--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Automatically Cleans Mass Cytometry (CyTOF) FCS files
 Version: 1.0.2
 Date: 2020-09-17
 Author: JimboMahoney
-Maintainer: JimboMahoney
+Maintainer: JimboMahoney <JimboMahoney@Github.com>
 Description: 
     Intended to save time analysing CyTOF files by automating the initial gating steps.
     A simple program that takes (normalised) FCS files from a CyTOF v3 (Helios) and automatically gates the data based
